src/App.css
@font-face {
	font-family: Bebas;
	src: url(./assets/Bebas.ttf);
}

@font-face {
	font-family: PlaylistScript;
	src: url(./assets/Playlist-Script.otf);
}

.hidden {
	display: none;
}

.App {
    font-family: 'Roboto', sans-serif;
    
}

.App-header {
	height: 50px;
	background-color: white;
	position: fixed;
	top: 0;
	width: 100vw;
	z-index: 999;
}


.App-logo {
	height: 120px;
	margin-left: 20px;
	top: -3px;
	left: 0px;
	border: #B7DBF5 solid 2px;
	border-radius: 50%;
	padding: 3px;
	background-color: white;
	position: relative;

}

.margin-top {
	position: relative;
	top: 50px;
	margin: auto;
	margin-bottom: 150px;
}

.wrapper, .fb-video {
	height: 300px;
}

.hamburger {
	width: 200px;
	background-color: white;
	border: #040706 solid 2px;
	color: #040706;
	padding: 12px;
	border-radius: 3px;
	cursor: pointer;
	text-decoration: none;
	box-sizing: border-box;
}

.hamburger:active, .hamburger:hover, .hamburger:focus {
	background-color: #CC8E83;
}

.navbar {
	position: fixed;
	width: 100%;
	z-index: 999;
}

.desktopNav {
 	column-count: 8;
 	margin-left: auto;
	display: flex;
	font-size: 16px;
	height: 25px;
	position: fixed;
	left: 0;
	width: 100%;
}

.tagbox {
	float: right;
	text-align: right;
	position: relative;
	top: 80px;
	width: 25%;
	display: flex;
	flex-wrap: wrap;
	display: block;
}

.tagbox div {
	display: block;
}

.social-logo, .yelp-logo {
	padding: 3px;
}

.Home, .Contact {
	width: 50%;
	margin:auto;
}

.social-logo {
	height: 40px;
	padding: 10px;
	cursor: pointer;
}

.gmail-logo {
	height: 40px;
	margin-right: 20px;
	cursor: pointer;
	position: relative;
	top: 12px;
}

.contacts {
	display: flex;
	flex-wrap: wrap;
}

.contact-item {
	margin: auto;
	max-width: 200px;
    padding: 20px;
}

.email {
	margin: auto;
	max-width: 200px;
}

.yelp-logo {
	height: 45px;
	padding: 10px;
	filter: hue-rotate(330deg)
}

.yelp-logo:hover, .yelp-logo:active, .social-logo:hover, .social-logo:active {
	filter: brightness(1.5);

}

.mobile-video-option {
	display: none;
}

.tagline {
	font-family: 'PlaylistScript';
	font-size: 30px;
	float: right;
	padding-left: 20px;
}

.spicy-header {
	font-family: 'PlaylistScript';
	font-size: 27px;
	padding: 20px;
}


main {
	text-align: center;
	margin: auto;
	padding: 50px 10px;
	height: 100vh;
	position: relative;
	top: 80px;
}

.Contact {
	width: 70%;
}

nav {
  font-family: "Lato", sans-serif;
  padding: 1% 0;

/*  blackish*/
  color: #040706;

/*  light blue*/
  background-color: #B7DBF5;
}

.navlink {
	color: #040706;
	text-decoration: none;
	margin: auto;
	padding: 24.5px 10px;
	position: relative;
	top: -22px;
}

.navlink:hover, .navlink:active {
	background-color: white;
}


.mobileNav a {
    display: inline-block;
    text-align: left;
    top: 20px;
    width: 165px;
    margin-left: 25px;
    padding: 5px;
    height: 30px;

}

.mobileNav {
	position: fixed;
	z-index: 99;
}


h1, h2 {
	font-family: 'Bebas';
	letter-spacing: 3px;
}

.article {
	max-width: 700px;
	margin: auto;
}

.home-text {
	padding-top: 60px;
}


p {
	font-size: 16px;
	line-height: 25px;
}

.about-list {
	text-align: left;
	list-style: none;
	line-height: 25px;
	font-size: 15px;
}

.about-list li {
	display: flex;
	padding: 15px;
}

.about-text {
	padding-top: 10px;
}

.bullet {
	padding-right: 25px;
}

.headshot {
	height: 250px;
	border-radius: 50%;
	border: 5px solid #CC8E83;
	margin-bottom:30px;
}

.naving-button {
	background-color: #CC8E83;
	color: #040706;
	padding: 12px;
	border: none;
	border-radius: 3px;
	cursor: pointer;
	text-decoration: none;
	max-width: 100px;
}


.naving-button:hover, .naving-button:active {
	background-color: #B7DBF5;	
}

ul {
	padding-left: 0px;
}

.you-article, .authentic-article, .location-panel {
	width: 70%;
	margin: auto;
	margin-bottom: 80px
}

.location-panel {
	border: #349EDB solid 2px;
	width: 400px;
	padding: 20px;
	box-sizing: border-box ;
}

.Q-holder, .price-container, .class-panel-container {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.aQ {
	border: #CC8E83 solid 2px;
	border-radius: 3px;
	width: 400px;
	margin: 15px;
}

.price-item {
	border: #349EDB solid 2px;
	border-radius: 3px;
	width: 400px;
	margin: 15px;
}

.class-panel1 {
	border: #349EDB solid 2px;
	border-radius: 3px;
	width: 400px;
	margin: 15px;
}

.class-panel2 {
	border: #B7DBF5 solid 2px;
	border-radius: 3px;
	width: 400px;
	margin: 15px;
}

.aQ p, .price-item p, .class-panel p {
	margin: 25px;
}

.aQ h3 {
	margin: 0px;
	background-color: #CC8E83;
	padding: 25px;
	height: 70px;
}

.price-item p {
	font-size: 13px;
}
.price-item {
	width: 28%;
}

.price-item:hover, .price-item:active, .mobile-video-option:hover {
	box-shadow: 0px 0px 20px 4px rgba(0, 0, 0, 0.50);
 	cursor: pointer;
}


.price-item h3, .class-panel h3 {
	margin: 0px;
	background-color: #B7DBF5;
	padding: 25px;
	height: 20px;
}

.price-item > h3 {
	font-family: 'PlaylistScript';
	font-size: 27px;
	padding: 10px;
	height: 40px;
}

.imagine {
	width: 30vw;
	float: right;
	border: #CC8E83 solid 2px;
	border-radius: 3px;
	margin: 40px;
}

.buy-now {
	position: fixed;
	right: 20%;
}

.button-margin {
	top: 50px;
	margin: 50px 50px;
	position: relative;
}

.ballet-body {
	margin-bottom: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
}

.fa {
	font-size: 20px;
	margin-left: 10px;
}

.button-div {
	height: 250px;
	position: relative;
}

@media all and (max-width: 1024px) {
	.desktopNav {
		font-size: 14px;
	}

}

@media all and (max-width: 921px) {
	.imagine {
		width: 60%;
		float: none;
	}
}

@media all and (max-width: 1024px) {
	.desktopNav {
		display: none;
	}
	nav {
		width: 200px;
		background-color: transparent;
		border-radius: 3px;
	}
	.App-header {
		height: 126px;
    	background-color: #B7DBF5;
    	position: fixed;
    	top: 0px;


	}
	.App-logo {
		height: 90px;
		z-index: 999;
	}
	.logo-container {
		background-color: #B7DBF5;
	}
	.mobileNav {
		display: block;
	}
	main {
		top: 150px;
	}
	.price-item p {
		font-size: 12.5px;
    	line-height: 1.5;
	}
	.price-item {
		width: 70%;
	}
	.tagbox {
		top: 30px;
		display: block;
	}

}

@media all and (max-width: 768px) {
	.imagine {
		width: 90%;
	}
	.wrapper {
		display: none;
	}
	.mobile-video-option {
		display: block;
		width: 80%;
		margin: auto;
	}
}

@media all and (max-width: 636px) {
	.Home {
		width: 80%;
	}
	.button-margin {
		margin: 25px 15px 75px;
	}
}

@media all and (max-width: 425px) {
	.button-margin {
		display:block;
		margin: 10px;
	}
	p {
		font-size: 12px;
	}
}

